remove buttons from header, fix overlapping content by header

--- a/additional_style.css
+++ b/additional_style.css
@@ -167,7 +167,7 @@ body.dabody #damobile-toggler {
 }
 
 body.dabody .danavbar-title {
-  max-width: 80% !important;
+  max-width: 100% !important;
 }
 body.dabody .navbar-brand  {
   white-space: normal !important;
